[build-system]
requires = [
  "setuptools",
  ]
build-backend = "setuptools.build_meta"

[project]
name = "OPT4TorchDataSet"
dynamic = ["version"]
authors = [
  { name="梦归云帆", email="1138663075@qq.com" },
]
description = "Plug-and-Play Optimal Page Replacement Algorithm (OPT) for Torch Dataset"
keywords = ["python","torch","dataset","OPT"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "torch",
  "safetensors",
  "typer",
  "rich",
  "loguru",
  "psutil",
  "cachetools",
  "timm",
  "packaging",
]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.scripts]
opt4 = "OPT4TorchDataSet.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"OPT4TorchDataSet" = ["cpp/*.cpp"]

[tool.setuptools.dynamic]
version = {attr = "OPT4TorchDataSet.__version__"}

[project.urls]
Homepage = "https://github.com/Puiching-Memory/OPT4TorchDataset"
Issues = "https://github.com/Puiching-Memory/OPT4TorchDataset/issues"